Update ProGuard for Java 25 builds